rancher-master/rancher-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: local-rancher-ingressroute
  namespace: cattle-system
spec:
  entryPoints:
    - websecure
    - web
  routes:
  - match: Host(`rancher.rajesh-kumar.in`)
    kind: Rule
    services:
    - name: rancher
      port: 80
      scheme: http
  tls:
    secretName: rancher-tls-cert
