rancher-master/vault-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault-ingressroute
  namespace: vault
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`vault.rajesh-kumar.in`)
    kind: Rule
    services:
    - name: vault
      port: 8200
      scheme: http
  tls:
    secretName: rancher-tls-cert
